fixed layout issues, made it look nicer, updated readme how-to section

--- a/mock/src/styles/App.css
+++ b/mock/src/styles/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0a369d;
   min-height: 8vh;
   display: flex;
   flex-direction: column;
